# tinyvector

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rustfmt.toml
.github/workflows/: build.yaml  ci.yaml  publish.yaml
src/: db.rs  errors.rs  main.rs  search.rs  server.rs  shutdown.rs  similarity.rs
src/routes/: collection.rs  docs.rs  mod.rs  system.rs
