[package]
edition = "2021"
license = "MIT"
name = "tinyvector"
readme = "README.md"
version = "0.0.0-alpha.1"
categories = ["science", "database-implementations"]
repository = "https://github.com/m1guelpf/tinyvector-rs"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
keywords = ["database", "nearest-neighbor", "embedding", "sqlite"]
description = "A tiny nearest-neighbor embedding database built with SQLite."

[dependencies]
rayon = "1.7.0"
anyhow = "1.0.71"
serde = "1.0.165"
bincode = "1.3.3"
tracing = "0.1.37"
dotenvy = "0.15.7"
schemars = "0.8.12"
thiserror = "1.0.40"
serde_json = "1.0.99"
lazy_static = "1.4.0"
aide = { version = "0.11.0", features = ["axum"] }
tokio = { version = "1.29.1", features = ["full"] }
axum = { version = "0.6.18", features = ["macros"] }
axum-jsonschema = { version = "0.6.0", features = ["aide"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
kiddo = "2.1.1"

[build-dependencies]
chrono = "0.4.26"
