[package]
edition = "2021"
license = "MIT"
version = "0.1.0"
name = "tinyvector"
readme = "README.md"
categories = ["science", "database-implementations"]
repository = "https://github.com/m1guelpf/tinyvector"
description = "A tiny embedding database in pure Rust."
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
keywords = ["database", "nearest-neighbor", "embedding"]

[dependencies]
axum = "0.7.2"
rayon = "1.8.0"
anyhow = "1.0.77"
serde = "1.0.193"
bincode = "1.3.3"
tracing = "0.1.40"
schemars = "0.8.16"
thiserror = "1.0.52"
serde_json = "1.0.108"
lazy_static = "1.4.0"
aide = { version = "0.13.1", features = ["axum"] }
tokio = { version = "1.35.1", features = ["full"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-server = "0.6.0"
once_cell = "1.19.0"

[build-dependencies]
chrono = "0.4.31"
